<resources>
    <string name="app_name">LifeTracker</string>
    <string name="start_tracking">Start tracking</string>
    <string name="end_tracking">End tracking</string>
    <string name="time">Time</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="activities">Activities:</string>
    <string name="save">Save</string>
    <string name="delete_some">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="import_prebuilt">Import</string>
    <string name="current_over_all">Current Over All</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="days">Days:</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="date">Date like 2020–02–02</string>

    <string name="settings">Settings</string>
    <string name="track_routine">Track Routine</string>
    <string name="statistics_settings">Statistics Settings</string>
    <string name="save_routine">Save Routine</string>
    <string name="over_all_statistics">Current Statistics</string>
    <string name="custom_statistics">Custom Statistics</string>

    <!--filtering preferences-->
    <string name="category_date_interval_key" translatable="false">dateInterval</string>
    <string name="category_date_interval_title">Date Interval</string>

    <string name="date_picker_from_key" translatable="false">datePickerFrom</string>
    <string name="date_picker_from_title">From:</string>
    <string name="date_picker_from_summary">2020–02–02</string>

    <string name="date_picker_to_key" translatable="false">datePickerTo</string>
    <string name="date_picker_to_title">To:</string>
    <string name="date_picker_to_summary">2020–02–02</string>

    <string name="category_weekdays_key" translatable="false">weekdaysSelection</string>
    <string name="category_weekdays_title">Weekdays</string>

    <string name="weekdays_key" translatable="false">weekdays</string>
    <string name="weekdays_title">Weekdays</string>
    <string name="weekdays_dialog_title">Select Weekdays</string>
    <string name="weekdays_summary">Weekdays to be included</string>

    <string name="category_time_interval_key" translatable="false">timeInterval</string>
    <string name="category_time_interval_title">Time Interval</string>

    <string name="time_picker_from_key" translatable="false">timePickerFrom</string>
    <string name="time_picker_from_title">From:</string>
    <string name="time_picker_from_summary">00:00</string>

    <string name="time_picker_to_key" translatable="false">timePickerTo</string>
    <string name="time_picker_to_title">To:</string>
    <string name="time_picker_to_summary">00:00</string>
    <!--end filtering preferences-->

    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
</resources>
