<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/viewGithub"
        android:title="@string/viewGithub">
    </item>
    <item
        android:id="@+id/actionToggleValues"
        android:title="@string/actionToggleYValues"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionToggleXValues"
        android:title="@string/actionToggleXValues"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionToggleIcons"
        android:title="@string/actionToggleIcons"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionTogglePercent"
        android:title="@string/actionTogglePercent"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionToggleMinAngles"
        android:title="@string/actionToggleMinAngles"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionToggleHole"
        android:title="@string/actionToggleHole"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionToggleCurvedSlices"
        android:title="@string/actionToggleCurvedSlices"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionDrawCenter"
        android:title="@string/actionDrawCenterText"
        android:checkable="true"
        android:checked="true">
    </item>
    <item
        android:id="@+id/actionToggleSpin"
        android:title="@string/actionToggleSpin">
    </item>
    <item
        android:id="@+id/animateX"
        android:title="@string/animateX">
    </item>
    <item
        android:id="@+id/animateY"
        android:title="@string/animateY">
    </item>
    <item
        android:id="@+id/animateXY"
        android:title="@string/animateXY">
    </item>
    <item
        android:id="@+id/actionSave"
        android:title="@string/actionSave">
    </item>

</menu>