<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    <data>-->
    <!--        <variable-->
    <!--            name="sleepDetailViewModel"-->
    <!--            type="view" />-->
    <!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lifetracker.statisticsSettings.StatisticsSettingsFragment">

        <Button
            android:id="@+id/overAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_over_all"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/overAllButtonTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test Pager"
            app:layout_constraintBottom_toTopOf="@+id/overAllButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            app:layout_constraintBottom_toTopOf="@+id/fromDateEditText"
            app:layout_constraintStart_toStartOf="@+id/fromDateEditText"
            android:labelFor="@+id/fromDateEditText"/>
        <EditText
            android:id="@+id/fromDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/date"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />


        <TextView
            android:id="@+id/toTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            app:layout_constraintBottom_toTopOf="@+id/toDateEditText"
            app:layout_constraintStart_toStartOf="@+id/toDateEditText"
            android:labelFor="@+id/toDateEditText"/>
        <EditText
            android:id="@+id/toDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/date"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/fromDateEditText"
            app:layout_constraintTop_toBottomOf="@+id/fromDateEditText" />

        <TextView
            android:id="@+id/statActivitiesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activities"
            app:layout_constraintBottom_toTopOf="@+id/statActivitiesMultiAutoCompleteTextView"
            app:layout_constraintStart_toStartOf="@+id/statActivitiesMultiAutoCompleteTextView"
            android:labelFor="@+id/statActivitiesMultiAutoCompleteTextView"/>
        <MultiAutoCompleteTextView
            android:id="@+id/statActivitiesMultiAutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <TextView
            android:id="@+id/DaysTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="120dp"
            android:layout_height="240dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fromDateEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/mondayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/tuesdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/wednesdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/thursdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/FridayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/SaturdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <CheckBox
                android:id="@+id/SundayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
