<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    <data>-->
    <!--        <variable-->
    <!--            name="sleepDetailViewModel"-->
    <!--            type="view" />-->
    <!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lifetracker.settings.SettingsFragment">

        <Button
            android:id="@+id/deleteSomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_some"
            app:layout_constraintBottom_toTopOf="@+id/DeleteAllButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <Button
            android:id="@+id/ImportPrebuiltButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_prebuilt"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/DeleteAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteSomeButton" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/deleteSomeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImportPrebuiltButton">

            <TextView
                android:id="@+id/activityTextView"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:text="@string/activities"
                android:textStyle="bold" />

            <MultiAutoCompleteTextView
                android:id="@+id/activitiesMultiAutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
